@@ -1,3 +1,7 @@
+2006-04-19  Tapani Palli <tapani.palli@nokia.com>
+
+	* applied thumb flag for compilation
+
 2006-04-19  Johan Bilien  <johan.bilien@nokia.com>
 
 	* hildon-widgets/hildon-window.c: Fixed a bug in child size allocation
